correction de la balise img  pour separateur droit du plat principal dans note.html

--- a/note.html
+++ b/note.html
@@ -1026,7 +1026,7 @@
                      </g>
                      </svg>-->
                      <h3><a class="souligne-titre">Point d'orgue</a></h3>
-                     <img class="svgd" src="imagesn/oted.svg" alt="">
+                     <img class="svgd" src="images/noted.svg" alt="">
                      <!--<svg class="svgd"
                         xmlns:dc="http://purl.org/dc/elements/1.1/"
                         xmlns:cc="http://creativecommons.org/ns#"
