Modification des fichiers html pour la marge dans les pages menu

--- a/chic.html
+++ b/chic.html
@@ -3,22 +3,24 @@
         <head>
             <meta charset="UTF-8"/>
             <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1" />
+            <meta name="description" content="Menu Le chic à la française">
+            <link rel="icon" type="image/logo"  href="./icone.ico">
             <link rel="stylesheet" href="style/chic.css"/>
-            <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap&family=Kalam&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css2?family=Croissant+One&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Charm&display=swap" rel="stylesheet">
-            <link rel="stylesheet" media="screen and (max-width: 1280px)" href="garde2.css"/>
             <title>le chic à la française</title>
         </head>
         <body>
            <div class="container">
                <header>
-                  <h1><a href="index.html">ohmyfood</a></h1>
+                  <a href="index.html">ohmyfood</a>
                </header>
+               <h1> Le chic à la française</h1>
                <section>
                   <h2>Le chic à la française</h2>
                   <div class="alignement-titre1">      <!-- pour aligner les separateurs et le titre-->
-                     <img class="svgg" src="images/chic-entree-g.svg" alt="">
+                     <img class="svgg" src="images/gauchee.svg" alt="">
                      <!--<svg class="svgg"
                         xmlns:dc="http://purl.org/dc/elements/1.1/"
                         xmlns:cc="http://creativecommons.org/ns#"
@@ -133,7 +135,7 @@
                         </g>
                      </svg>-->
                      <h3><a class="souligne-titre1">Pour se mettre en appétit</a></h3>
-                     <img class="svgd" src="images/chic-entree-d.svg" alt="">
+                     <img class="svgd" src="images/droitee.svg" alt="">
                      <!--<svg class="svgd"
                      xmlns:dc="http://purl.org/dc/elements/1.1/"
                      xmlns:cc="http://creativecommons.org/ns#"
@@ -261,7 +263,7 @@
                      <p class="prix">57€</p>
                   </div>
                   <div class="alignement-titre2">
-                     <img class="svgg" src="images/chic-principal-g.svg" alt="">
+                     <img class="svgg" src="images/gauchep.svg" alt="">
                      <!--<svg class="svgg"
                         xmlns:dc="http://purl.org/dc/elements/1.1/"
                         xmlns:cc="http://creativecommons.org/ns#"
@@ -376,7 +378,7 @@
                         </g>
                      </svg>-->
                      <h3><a class="souligne-titre2">Plaisir des papilles</a></h3>
-                     <img class="svgd" src="images/chic-principal-d.svg" alt="">
+                     <img class="svgd" src="images/droitep.svg" alt="">
                      <!--<svg class="svgd"
                      xmlns:dc="http://purl.org/dc/elements/1.1/"
                      xmlns:cc="http://creativecommons.org/ns#"
@@ -504,7 +506,7 @@
                      <p class="prix">175€</p>
                   </div>
                   <div class="alignement-titre3">
-                     <img class="svgg" src="images/chic-dessert-g.svg" alt="">
+                     <img class="svgg" src="images/gauched.svg" alt="">
                      <!--<svg class="svgg"
                         xmlns:dc="http://purl.org/dc/elements/1.1/"
                         xmlns:cc="http://creativecommons.org/ns#"
@@ -619,7 +621,7 @@
                         </g>
                      </svg>-->
                      <h3><a class="souligne-titre3">Gourmandises sucrées</a></h3>
-                     <img class="svgd" src="images/chic-dessert-d.svg" alt="">
+                     <img class="svgd" src="images/droited.svg" alt="">
                      <!--<svg class="svgd"
                      xmlns:dc="http://purl.org/dc/elements/1.1/"
                      xmlns:cc="http://creativecommons.org/ns#"
@@ -738,10 +740,11 @@
                   <p>Fondant au chocolat revisité</p>
                   <p>Millefeuille croustillant</p>
                </section>
+               <p id="marge"></p>
                <footer>
                      <p class="btn"><a href="mentionslegales.html">Mentions légales</a></p> 
                      <p class="btn"><a href="mailto:Sebastien.Jullian@fujitsu.com">Contactez-nous</a></p>
                </footer>
             </div>
         </body>
-    </html>
+    </html>00
