--- a/delice.html
+++ b/delice.html
@@ -3,6 +3,8 @@
         <head>
             <meta charset="UTF-8"/>
             <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1" />
+            <link rel="icon" type="image/logo"  href="c:\openclassroom\accueil\icone.ico">
+            <meta name="description" content="Le delice des papilles">
             <link rel="stylesheet" href="style/delice.css"/>
             <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Spectral&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
@@ -14,12 +16,13 @@
         <body>
             <div class="container">
                 <header>
-                    <h1><a href="index.html">ohmyfood</a></h1>
+                    <a href="index.html">ohmyfood</a>
                 </header>
+                <h1>Le délice des papilles</h1>
                 <section>
                     <h2>Le délice des papilles</h2>
                     <div class="alignement-titre">
-                        <img class="svgg" src="images/deliceg.svg" alt="">
+                        <img class="svgg" src="deliceg.svg" alt="">
                             <!--<svg class="svgg"
                             xmlns:dc="http://purl.org/dc/elements/1.1/"
                             xmlns:cc="http://creativecommons.org/ns#"
@@ -171,7 +174,7 @@
                             </g>
                             </svg>-->
                         <h3><a class="souligne-titre">Pour bien commencer</a></h3>
-                        <img class="svgd" src="images/deliced.svg" alt="">
+                        <img class="svgd" src="deliced.svg" alt="">
                             <!--<svg class="svgd"
                             xmlns:dc="http://purl.org/dc/elements/1.1/"
                             xmlns:cc="http://creativecommons.org/ns#"
@@ -336,7 +339,7 @@
                             <p class="prix">56€</p>
                         </div>
                         <div class="alignement-titre">
-                            <img class="svgg" src="images/deliceg.svg" alt="">
+                            <img class="svgg" src="deliceg.svg" alt="">
                                <!--<svg class="svgg"
                                 xmlns:dc="http://purl.org/dc/elements/1.1/"
                                 xmlns:cc="http://creativecommons.org/ns#"
@@ -488,7 +491,7 @@
                                 </g>
                                 </svg>-->
                             <h3><a class="souligne-titre">Pour bien continuer</a></h3>
-                            <img class="svgd" src="images/deliced.svg" alt="">
+                            <img class="svgd" src="deliced.svg" alt="">
                                 <!--<svg class="svgd"
                                 xmlns:dc="http://purl.org/dc/elements/1.1/"
                                 xmlns:cc="http://creativecommons.org/ns#"
@@ -653,7 +656,7 @@
                             <p class="prix">115€</p>
                         </div>
                     <div class="alignement-titre">
-                        <img class="svgg" src="images/deliceg.svg" alt="">
+                        <img class="svgg" src="deliceg.svg" alt="">
                             <!--<svg class="svgg"
                             xmlns:dc="http://purl.org/dc/elements/1.1/"
                             xmlns:cc="http://creativecommons.org/ns#"
@@ -805,7 +808,7 @@
                             </g>
                             </svg>-->
                         <h3><a class="souligne-titre">Pour bien terminer</a></h3>
-                        <img class="svgd" src="images/deliced.svg" alt="">
+                        <img class="svgd"d src="deliced.svg" alt="">
                            <!-- <svg class="svgd"
                             xmlns:dc="http://purl.org/dc/elements/1.1/"
                             xmlns:cc="http://creativecommons.org/ns#"
@@ -970,7 +973,8 @@
                         <p class="prix">55€</p>
                     </div>
                 </section>
-                <footer id="footer">
+                <p id="marge"></p>
+                <footer>
                         <p  class="btn"><a href="mentionslegales.html">Mentions légales</a></p>
                         <p class="btn"><a href="mailto:Sebastien.Jullian@fujitsu.com">Contactez-nous</a></p> 
                 </footer>
