--- a/mentionslegales.html
+++ b/mentionslegales.html
@@ -3,6 +3,7 @@
         <head>
             <meta charset="UTF-8"/>
             <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1" />
+            <link rel="icon" type="image/logo"  href="images/icone.ico">s
             <link rel="stylesheet" href="style/mentionslegales.css"/>
             <link rel="stylesheet" media="screen and (max-width: 1280px)" href="garde2.css"/>
             <link href="https://fonts.googleapis.com/css2?family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
@@ -11,7 +12,7 @@
         <body>
             <div class="container">
                 <header>
-                    <h1><a href="index.html">ohmyfood</a></h1>
+                    <a href="index.html">ohmyfood</a>
                 </header>
                 <p class="texte">
                     L'iPhone et beaucoup de téléphones Android possèdent des écrans 3 à 4 pouces (7 à 10 cm) avec 320 à 480 pixels (environ 160 dpi). Firefox pour Maemo s'exécute sur le Nokia N900, qui a la même taille mais entre 480 et 800 pixels (environ 240 dpi). À cause de cela, la précédente version de Fennec affichait beaucoup de pages un tiers plus petit (en taille réelle) que l'iPhone ou les systèmes Android. Cela causait des problèmes de lecture et d'utilisation sur beaucoup de sites optimisés pour le tactile. Peter-Paul Koch a écrit sur ce sujet dans son article A pixel is not a pixel is not a pixel (en).<br>
@@ -32,9 +33,9 @@
 
                     Le ratio par défaut dépend de la résolution. Lorsqu'elle est inférieure à 200 dpi, le ratio sera de 1,0. Entre 200 et 300 dpi, il s'élèvera à 1,5. Au delà, il vaut floor(densité / 150 dpi). Notez que le ratio par défaut est avéré uniquement lorsque l'échelle du viewport vaut 1. Sinon, la relation entre pixels CSS et pixels matériels dépend du niveau de zoom actuel.
                 </p>
-            <footer id="footer">
-                
-            </footer>
+	            <footer id="footer">
+	                
+	            </footer>
             </div>
         </body>
     </html>
