--- a/note.html
+++ b/note.html
@@ -3,9 +3,10 @@
         <head>
             <meta charset="UTF-8"/>
             <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1" />
+            <meta name="description" content="Menu La note enchantee">
+            <link rel="icon" type="image/logo"  href="images/icone.ico">
             <link rel="stylesheet" href="style/note.css"/>
             <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-            <link rel="stylesheet" media="screen and (max-width: 1280px)" href="garde2.css"/>
             <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css2?family=Devonshire&display=swap" rel="stylesheet">
             <script src="https://kit.fontawesome.com/91eac4cc42.js" crossorigin="anonymous"></script>
@@ -14,9 +15,11 @@
         <body>
             <div class="container">
                <header>
-                  <h1><a href="index.html">ohmyfood</a></h1>
+                  <a href="index.html">ohmyfood</a>
                </header>
+               <h1>La note enchantée</h1>
                <section>
+                  
                   <h2><i class="fab fa-itunes-note"></i><br>La note enchantée</h2>  
                   <div class="alignement-titre">
                      <img class="svgg" src="images/noteg.svg" alt="">
@@ -2029,14 +2032,15 @@
                      </g>
                      </svg>-->
                   </div>
-                     <p>Macaron noisette et chococolat, glace au caramel brun et sel de Guérande</p>
-                     <p>Baba au rhum revisité avec son coulis de citron</p>
-                     <p>tarte au citron meringuée destructurée</p>
-                     <p id="titre-bas-de-page"><i class="fas fa-music"></i> La note enchantée</p>
+                  <p>Macaron noisette et chococolat, glace au caramel brun et sel de Guérande</p>
+                  <p>Baba au rhum revisité avec son coulis de citron</p>
+                  <p>tarte au citron meringuée destructurée</p>
+                  <p id="titre-bas-de-page"><i class="fas fa-music"></i> La note enchantée</p>
                </section>    
                <footer>
-                     <p class="btn"><a href="mentionslegales.html">Mentions légales</a></p>
-                     <p class="btn"><a href="mailto:Sebastien.Jullian@fujitsu.com">Contactez-nous</a></p> 
+                  <p id="marge"></p>
+                  <p class="btn"><a href="mentionslegales.html">Mentions légales</a></p>
+                  <p class="btn"><a href="mailto:Sebastien.Jullian@fujitsu.com">Contactez-nous</a></p> 
                </footer>
             </div>
         </body>
