--- a/palette.html
+++ b/palette.html
@@ -3,19 +3,21 @@
         <head>
             <meta charset="UTF-8"/>
             <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1" />
+            <meta name="description" content="La palette du gout">
+            <link rel="icon" type="image/logo"  href="images/icone.ico">
             <link rel="stylesheet" href="style/palette.css"/>
             <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
-            <link rel="stylesheet" media="screen and (max-width: 1280px)" href="garde2.css"/>
             <title>La palette du goût</title>
         </head>
         <body>
             <div class="container">
                 <header>
-                    <h1><a href="index.html">ohmyfood</a></h1>
+                    <a href="index.html">ohmyfood</a>
                 </header>
+                <h1>La palette du goût</h1>
                 <section>
                     <h2>La palette du goût</h2>
                     <div class="alignement-titres">
@@ -1256,7 +1258,9 @@
                         <p>Mousse au chocolat au piment d'espelette et à la truffe noire</p>
                         <p class="prix">60€</p>
                     </div>
+                        
                 </section>
+                <p id="marge"></p>
                 <footer>
                         <p class="btn"><a href="mentionslegales.html">Mentions légales</a></p>
                         <p class="btn"><a href="mailto:Sebastien.Jullian@fujitsu.com">Contactez-nous</a></p> 
