--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <head>
             <meta charset="UTF-8"/>
             <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1" />
+            <meta name="description" content="Restaurant ohmyfood">
+            <link rel="icon" type="image/logo"  href="images/icone.ico">
             <link rel="stylesheet" href="style/accueil.css"/>
             <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
@@ -14,33 +16,41 @@
         <body >
             <div class="container">
                 <header>
-                    <h1>ohmyfood</h1>
+                    <a href="index.html">ohmyfood</a>
                 </header>
                 <section>
                     <div>    
-                        <div class="note">  <!-- cadre: La note enchantée-->
-                            <p class="note__titre"><i class="fab fa-itunes-note"></i></p>
-                            <h2>La note enchantée</h2> <!-- 1ere-->
-                            <h3><a href="note.html">MENU</a></h3>
+                        <div class="note">  
+                            <a href="note.html">
+                                <p class="note__titre"><i class="fab fa-itunes-note"></i></p>
+                                <h2>La note enchantée</h2> 
+                                <h3>MENU</h3>
+                            </a>
                         </div>
-                        <div class="chic">  <!-- cadre: Le chic à la française-->
-                            <h2>Le chic à la française</h2>
-                            <h3><a href="chic.html">Menu</a></h3>
+                        <div class="chic">  
+                            <a href="chic.html">
+                                <h2>Le chic à la française</h2>
+                                <h3>Menu</h3>
+                            </a>
                         </div>
-                        <div class="delice"> <!-- cadre: Le délice des papilles-->
-                            <h2>Le délice des papilles</h2>
-                            <h3><a href="delice.html">Menu</a></h3>
+                        <div class="delice"> 
+                            <a href="delice.html">
+                                <h2>Le délice des papilles</h2>
+                                <h3>Menu</h3>
+                            </a>
                         </div>
-                        <div class="palette"> <!-- cedre: La palette du gout-->
-                            <h2>La palette du goût </h2>
-                            <h3><a class="btn" href="palette.html">Menu</a></h3>
+                        <div class="palette"> 
+                            <a href="palette.html">
+                                <h2>La palette du goût </h2>
+                                <h3>Menu</h3>
+                            </a>
                         </div>
-                        <p class="proch">Prochainement
-                        <span class="point point__1">.</span>    <!-- Points d'animation-->
+                    </div>
+                    <p class="proch">Prochainement
+                        <span class="point point__1">.</span>   
                         <span class="point point__2">.</span>
                         <span class="point point__3">.</span>
-                        </p>
-                    </div>
+                    </p>
                 </section>   
                 <footer>
                         <p class="btn"><a href="mentionslegales.html">Mentions légales</a></p>
