--- a/delice.html
+++ b/delice.html
@@ -22,7 +22,7 @@
                 <section>
                     <h2>Le délice des papilles</h2>
                     <div class="alignement-titre">
-                        <img class="svgg" src="deliceg.svg" alt="">
+                        <img class="svgg" src="images/deliceg.svg" alt="">
                             <!--<svg class="svgg"
                             xmlns:dc="http://purl.org/dc/elements/1.1/"
                             xmlns:cc="http://creativecommons.org/ns#"
@@ -174,7 +174,7 @@
                             </g>
                             </svg>-->
                         <h3><a class="souligne-titre">Pour bien commencer</a></h3>
-                        <img class="svgd" src="deliced.svg" alt="">
+                        <img class="svgd" src="images/deliced.svg" alt="">
                             <!--<svg class="svgd"
                             xmlns:dc="http://purl.org/dc/elements/1.1/"
                             xmlns:cc="http://creativecommons.org/ns#"
@@ -339,7 +339,7 @@
                             <p class="prix">56€</p>
                         </div>
                         <div class="alignement-titre">
-                            <img class="svgg" src="deliceg.svg" alt="">
+                            <img class="svgg" src="images/deliceg.svg" alt="">
                                <!--<svg class="svgg"
                                 xmlns:dc="http://purl.org/dc/elements/1.1/"
                                 xmlns:cc="http://creativecommons.org/ns#"
@@ -491,7 +491,7 @@
                                 </g>
                                 </svg>-->
                             <h3><a class="souligne-titre">Pour bien continuer</a></h3>
-                            <img class="svgd" src="deliced.svg" alt="">
+                            <img class="svgd" src="images/deliced.svg" alt="">
                                 <!--<svg class="svgd"
                                 xmlns:dc="http://purl.org/dc/elements/1.1/"
                                 xmlns:cc="http://creativecommons.org/ns#"
@@ -656,7 +656,7 @@
                             <p class="prix">115€</p>
                         </div>
                     <div class="alignement-titre">
-                        <img class="svgg" src="deliceg.svg" alt="">
+                        <img class="svgg" src="images/deliceg.svg" alt="">
                             <!--<svg class="svgg"
                             xmlns:dc="http://purl.org/dc/elements/1.1/"
                             xmlns:cc="http://creativecommons.org/ns#"
@@ -808,7 +808,7 @@
                             </g>
                             </svg>-->
                         <h3><a class="souligne-titre">Pour bien terminer</a></h3>
-                        <img class="svgd"d src="deliced.svg" alt="">
+                        <img class="svgd"d src="images/deliced.svg" alt="">
                            <!-- <svg class="svgd"
                             xmlns:dc="http://purl.org/dc/elements/1.1/"
                             xmlns:cc="http://creativecommons.org/ns#"
