Modification chemin image  favicone

--- a/chic.html
+++ b/chic.html
@@ -4,7 +4,7 @@
             <meta charset="UTF-8"/>
             <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1" />
             <meta name="description" content="Menu Le chic à la française">
-            <link rel="icon" type="image/logo"  href="./icone.ico">
+            <link rel="icon" type="image/logo"  href="images/icone.ico">
             <link rel="stylesheet" href="style/chic.css"/>
             <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap&family=Kalam&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css2?family=Croissant+One&display=swap" rel="stylesheet">
