Ajout lien pour la police ROBOTO pour le logo du fichier "mentions legales" Ajout du footer dans le css du fichier "mentions legales"

--- a/mentionslegales.html
+++ b/mentionslegales.html
@@ -6,6 +6,7 @@
             <link rel="icon" type="image/logo"  href="images/icone.ico">s
             <link rel="stylesheet" href="style/mentionslegales.css"/>
             <link rel="stylesheet" media="screen and (max-width: 1280px)" href="garde2.css"/>
+            <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css2?family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
             <title>la note enchantéee</title>
         </head>
