--- a/delice.html
+++ b/delice.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="UTF-8"/>
             <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1" />
-            <link rel="icon" type="image/logo"  href="c:\openclassroom\accueil\icone.ico">
+            <link rel="icon" type="image/logo"  href="images/icone.ico">
             <meta name="description" content="Le delice des papilles">
             <link rel="stylesheet" href="style/delice.css"/>
             <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Spectral&display=swap" rel="stylesheet">
