Correction erreurs validation w3c

--- a/delice.html
+++ b/delice.html
@@ -808,7 +808,7 @@
                             </g>
                             </svg>-->
                         <h3><a class="souligne-titre">Pour bien terminer</a></h3>
-                        <img class="svgd"d src="images/deliced.svg" alt="">
+                        <img class="svgd" src="images/deliced.svg" alt="">
                            <!-- <svg class="svgd"
                             xmlns:dc="http://purl.org/dc/elements/1.1/"
                             xmlns:cc="http://creativecommons.org/ns#"
