--- a/mentionslegales.html
+++ b/mentionslegales.html
@@ -3,12 +3,11 @@
         <head>
             <meta charset="UTF-8"/>
             <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1" />
-            <link rel="icon" type="image/logo"  href="images/icone.ico">s
-            <link rel="stylesheet" href="style/mentionslegales.css"/>
-            <link rel="stylesheet" media="screen and (max-width: 1280px)" href="garde2.css"/>
-            <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-            <link href="https://fonts.googleapis.com/css2?family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
-            <title>la note enchantéee</title>
+            <link rel="icon" type="image/logo"  href="images/icone.ico" />
+            <link rel="stylesheet" href="style/mentionslegales.css" />
+            <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet" />
+            <link href="https://fonts.googleapis.com/css2?family=Zhi+Mang+Xing&display=swap" rel="stylesheet" />
+            <title>La palette du goût</title>
         </head>
         <body>
             <div class="container">
