Modifications demandées lors dela soutenance   zoom,  suppression des commentaires et contenus des fichiers svg,   renseignement de l'attribut alt des img   ajout section dans Mentions legales   ajout des fichiers scss

--- a/mentionslegales.html
+++ b/mentionslegales.html
@@ -10,6 +10,7 @@
             <title>La palette du goût</title>
         </head>
         <body>
+            <section>
             <div class="container">
                 <header>
                     <a href="index.html">ohmyfood</a>
@@ -37,5 +38,6 @@
 	                
 	            </footer>
             </div>
+        </section>
         </body>
     </html>
