--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <body >
             <div class="container">
                 <header>
-                    <a href="index.html">ohmyfood</a>
+                   <h1> ohmyfood</h1>
                 </header>
                 <section>
                     <div>    
